jxbrower使用 需配置VM参数